🔧 Add getCategory api
